iac/k8s/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: speechtotextapisvc
  namespace: integrations
spec:
  ports:
  - port: 8000
  selector:
    app: speechtotextapi
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: speechtotextapi
  namespace: integrations
spec:
  selector:
    matchLabels:
      app: speechtotextapi
  serviceName: "speechtotextapisvc"
  replicas: 1
  template:
    metadata:
      labels:
        app: speechtotextapi
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: speechtotextapi
        image: luisdiazm/fasterwhisperapi:v1
        ports:
        - containerPort: 8000
          name: web
        volumeMounts:
        - name: iamodel-volume
          mountPath: /app/models
      volumes:
      - name: iamodel-volume
        persistentVolumeClaim:
          claimName: fasterwhispermodel
